# rules_tla

./: .bazelrc  .bazelversion  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  dependencies.bzl
.github/workflows/: BUILD.bazel  ci.yaml
docs/: rust_tla_connect_e2e_plan.md
e2e/: BUILD.bazel  MODULE.bazel  README.md  bazelw
e2e/negative_pluscal/: BUILD.bazel  MODULE.bazel  NotPlusCal.tla
e2e/rust_tla_connect/: BUILD.bazel  Cargo.toml  CounterModel.tla
e2e/rust_tla_connect/src/: lib.rs
e2e/rust_tla_connect/tests/: trace_replay.rs
e2e/smoke/: ApalacheCounter.tla  BUILD.bazel  HelloWorld.tla  MODULE.bazel  README.md  counter.cfg
examples/apalache_counter/: BUILD.bazel
examples/hello_world/: BUILD  BUILD.bazel  hello_world.tla
examples/module_graph/common/: BUILD.bazel  CounterHelper.tla
examples/module_graph/spec/: BUILD.bazel  CounterSpec.tla
examples/plain_module/: BUILD.bazel  plain_module.tla
examples/simple_bank_transfer/: BUILD  BUILD.bazel  simple_bank_transfer.tla
src/main/java/io/higherkindness/rules_tla/: BUILD  BUILD.bazel  Tla2ToolsWorker.java
src/main/java/rules_tla/: BUILD.bazel  Tla2ToolsWorker.java
src/test/java/io/higherkindness/rules_tla/: BUILD.bazel  E2eWorkspaceTest.java  RepoLayoutTest.java
src/test/java/rules_tla/: BUILD.bazel  RepoLayoutTest.java
tla/: BUILD.bazel  extensions.bzl  launcher.bzl  repositories.bzl  tla.bzl  toolchain.bzl
tla/rust/: BUILD.bazel  trace_corpus_support.rs
tla/tests/: BUILD.bazel  Root.tla  SingleModule.tla  analysis_tests.bzl
tla/tests/dup_a/: Shared.tla
tla/tests/dup_b/: BUILD.bazel  Shared.tla
tools/ci/: presubmit.sh
tools/workspace_defs/: github.bzl
