module(
    name = "io_higherkindness_rules_tla",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_java", version = "9.0.3")

tla = use_extension("//tla:extensions.bzl", "tla")
tla.toolchain(
    sha256 = "936a262061c914694dfd669a543be24573c45d5aa0ff20a8b96b23d01e050e88",
    version = "1.7.4",
)
use_repo(tla, "protobuf_java", "tla2tools")

register_toolchains("//tla:default_toolchain")
