load(":toolchain.bzl", "tla_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

tla_toolchain(
    name = "default_toolchain_impl",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default_toolchain",
    toolchain = ":default_toolchain_impl",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)
