load(":toolchain.bzl", "apalache_toolchain", "tla_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "apalache_toolchain_type",
    visibility = ["//visibility:public"],
)

tla_toolchain(
    name = "default_toolchain_impl",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default_toolchain",
    toolchain = ":default_toolchain_impl",
    toolchain_type = ":toolchain_type",
    visibility = ["//visibility:public"],
)

apalache_toolchain(
    name = "default_apalache_toolchain_impl",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default_apalache_toolchain",
    toolchain = ":default_apalache_toolchain_impl",
    toolchain_type = ":apalache_toolchain_type",
    visibility = ["//visibility:public"],
)
