[package]
name = "rust_tla_connect_demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
itf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tla-connect = { git = "https://github.com/wiggum-cc/tla-connect.git", rev = "c6752904373a0375291beb1e6e74040331e2ad5a" }
