load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@io_higherkindness_rules_tla//tla:tla.bzl", "pluscal_library", "tla_library", "tlc_test")

tla_library(
    name = "helper",
    srcs = ["CounterHelper.tla"],
)

tla_library(
    name = "counter_spec",
    srcs = ["CounterSpec.tla"],
    deps = [":helper"],
)

pluscal_library(
    name = "hello_world",
    srcs = ["HelloWorld.tla"],
)

tlc_test(
    name = "counter_model_check",
    cfg = "counter.cfg",
    main_module = "CounterSpec",
    spec = ":counter_spec",
)

tlc_test(
    name = "hello_model_check",
    cfg = "hello.cfg",
    main_module = "HelloWorld",
    spec = ":hello_world",
)

build_test(
    name = "build_smoke",
    targets = [
        ":helper",
        ":counter_spec",
        ":hello_world",
    ],
)

test_suite(
    name = "smoke_test",
    tests = [
        ":build_smoke",
        ":counter_model_check",
        ":hello_model_check",
    ],
)
