load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@io_higherkindness_rules_tla//tla:tla.bzl", "apalache_check", "apalache_simulate", "pluscal_library", "tla_library", "tlc_test")

tla_library(
    name = "helper",
    srcs = ["CounterHelper.tla"],
)

tla_library(
    name = "counter_spec",
    srcs = ["CounterSpec.tla"],
    deps = [":helper"],
)

pluscal_library(
    name = "hello_world",
    srcs = ["HelloWorld.tla"],
)

tla_library(
    name = "apalache_counter",
    srcs = ["ApalacheCounter.tla"],
)

tlc_test(
    name = "counter_model_check",
    cfg = "counter.cfg",
    main_module = "CounterSpec",
    spec = ":counter_spec",
)

tlc_test(
    name = "hello_model_check",
    cfg = "hello.cfg",
    main_module = "HelloWorld",
    spec = ":hello_world",
)

apalache_check(
    name = "apalache_bounded_check",
    invs = ["Inv"],
    length = 5,
    main_module = "ApalacheCounter",
    spec = ":apalache_counter",
)

apalache_check(
    name = "apalache_temporal_check",
    length = 5,
    main_module = "ApalacheCounter",
    spec = ":apalache_counter",
    temporals = ["AlwaysSafe"],
)

apalache_simulate(
    name = "apalache_simulation",
    length = 5,
    main_module = "ApalacheCounter",
    max_runs = 2,
    spec = ":apalache_counter",
)

build_test(
    name = "build_smoke",
    targets = [
        ":apalache_counter",
        ":helper",
        ":counter_spec",
        ":hello_world",
    ],
)

test_suite(
    name = "smoke_test",
    tests = [
        ":apalache_bounded_check",
        ":apalache_simulation",
        ":apalache_temporal_check",
        ":build_smoke",
        ":counter_model_check",
        ":hello_model_check",
    ],
)
