module(
    name = "rules_tla_smoke",
    compatibility_level = 0,
)

bazel_dep(name = "io_higherkindness_rules_tla", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "io_higherkindness_rules_tla",
    path = "../..",
)
