load("//tla:tla.bzl", "pluscal_library", "tla_simulation")

pluscal_library(
    name = "simple_bank_transfer",
    srcs = ["simple_bank_transfer.tla"],
)

tla_simulation(
    name = "spec",
    cfg = "demo.cfg",
    main_module = "simple_bank_transfer",
    spec = ":simple_bank_transfer",
    tags = ["manual"],
)
