load("//tla:tla.bzl", "pluscal_library", "tlc_simulation")

pluscal_library(
    name = "simple_bank_transfer",
    srcs = ["simple_bank_transfer.tla"],
)

tlc_simulation(
    name = "spec",
    cfg = "demo.cfg",
    main_module = "simple_bank_transfer",
    max_depth = 3,
    max_traces = 1,
    spec = ":simple_bank_transfer",
    tags = ["manual"],
)
