load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "worker",
    srcs = [
        "Tla2ToolsWorker.java",
    ],
    main_class = "rules_tla.Tla2ToolsWorker",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/bazel/src/main/java/com/google/devtools/build/lib/worker:worker_protocol_java",
        "@tla2tools",
    ],
)
